--- a/404.md
+++ b/404.md
@@ -21,10 +21,6 @@ Oops! The page you're looking for doesn't exist.
 ## What Can You Do?
 
 - [Go back to the Homepage](/)
-- [Contact Us](/contacts)
+- [Contact Me](/contacts)
 
 If you believe this is an error, please [let me know](https://github.com/aleff-github/aleff-github.github.io/issues).
-
----
-
-<sub>If you keep seeing this page, please [report it here](https://yourwebsite.com/report-404).</sub>
